<package format="3">
  <name>goal_publisher</name>
  <version>0.0.1</version>
  <description>The goal_publisher package</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
</package>
