<?xml version="1.0"?>
<package format="2">
  <name>goal_publisher</name>
  <version>0.0.1</version>
  <description>Goal publisher node for mission planning</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Your License</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3</exec_depend>

  <test_depend>pytest</test_depend>
</package>
