[metadata]
name = goal_publisher
version = 0.0.0
description = A ROS 2 package to publish goals and engage scripts
author = your_name
author_email = your_email@example.com
license = your_license

[options]
packages = find:
install_requires =
    rclpy
    geometry_msgs

[options.entry_points]
console_scripts =
    goal_publisher = goal_publisher.goal_publisher:main
